<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="411dp"
        android:layout_height="431dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login"
        app:layout_constraintBottom_toTopOf="@+id/guideline_card_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_card_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/tv_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_card_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/form_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_card_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="104dp"
                android:layout_height="34dp"
                android:text="@string/username_hint"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/enter_your_user_name"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="92dp"
                android:layout_height="34dp"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="307dp"
                android:layout_height="59dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password"
                android:textColor="@color/secondary_green"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/primary_dark_green"
                android:includeFontPadding="false"
                android:padding="16dp"
                android:text="@string/login_button"
                android:textColor="@android:color/white"
                android:textSize="22dp" />

            <LinearLayout
                android:id="@+id/ll_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/primary_dark_green"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/secondary_green"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>